--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.jpa.defer-datasource-initialization=true
 aws.accessKeyId=
 aws.secretKey=
 aws.region=us-east-2
-aws.s3.bucketName=bucketderechoslab
+aws.s3.bucketName=
 
 # Clave secreta para la firma del token
 ecommerce.app.jwtSecret=UnaClaveMuyLargaYSeguraParaMiTokenDeAlMenos32Caracteres
